--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -1,21 +1,9 @@
 version: 0.2
 
 phases:
-  pre_build:
+  install:
     commands:
-      - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS
-        --password-stdin $ACCOUNT_NUMBER.dkr.ecr.$AWS_REGION.amazonaws.com
+      - echo "Installing packages"
   build:
     commands:
-      - COMMIT_ID=$(echo $COMMIT_ID | cut -c 1-7)
-      - echo Build started on `date`
-      - echo Building Docker image...
-      - docker build -t $REPOSITORY_URI:latest -t $REPOSITORY_URI:$EXECUTION_ID -t $REPOSITORY_URI:$COMMIT_ID
-        -f Dockerfile --no-cache
-        .
-  post_build:
-    commands:
-      - echo Building complete on `date`
-      - echo Pushing the Docker image...
-      - docker push --all-tags $REPOSITORY_URI
+      - aws ssm get-parameter --name $BROADCAST_API_KEY --with-decryption --query "Parameter.Value" | jq -r
