--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -11,6 +11,7 @@ phases:
       - wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
       - unzip chromedriver_linux64.zip
       - mv chromedriver /usr/bin/chromedriver
+      - ls -la /usr/bin/
       - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
       - dpkg -i google-chrome-stable_current_amd64.deb
       - apt-get install -f -y
@@ -28,5 +29,4 @@ phases:
       - export ENVIRONMENT=preview
       - python3.9 -m pip install --upgrade pip wheel setuptools
       - make bootstrap
-      - printenv
       - make test
