--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -10,7 +10,7 @@ phases:
       - cd /tmp/
       - wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
       - unzip chromedriver_linux64.zip
-      - mv chromedriver /usr/bin/chromedriver
+      - mv chromedriver /usr/bin/google-chrome -f
       - ls -la /usr/bin/
       - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
       - dpkg -i google-chrome-stable_current_amd64.deb
