--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -6,9 +6,10 @@ phases:
       python: 3.11
     commands:
       - cd /tmp/
-      - wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
-      - unzip chromedriver_linux64.zip
-      - mv chromedriver /usr/bin/chromedriver
+      - sudo wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
+      - sudo unzip chromedriver_linux64.zip
+      - sudo mv chromedriver /usr/bin/chromedriver
+      - chromedriver --version
   pre_build:
     commands:
       - cd $CODEBUILD_SRC_DIR
