--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -30,12 +30,12 @@ phases:
     commands:
       - echo "Testing passed" > screenshots/success.txt
 
-# reports:
-#   pytest_reports:
-#     files:
-#       - broadcast-flow
-#     base-directory: functional-test-reports
-#     file-format: JUNITXML
+reports:
+  pytest_reports:
+    files:
+      - broadcast-flow
+    base-directory: functional-test-reports
+    file-format: JUNITXML
 
 artifacts:
   files:
