--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -26,6 +26,8 @@ phases:
       - python3.9 -m pip install --upgrade pip wheel setuptools
       - make bootstrap
       - make test-broadcast-flow
+      - make test-platform-admin-flow
+      - make test-cbc-integration
   post_build:
     commands:
       - echo "Testing passed" > screenshots/success.txt
@@ -33,7 +35,9 @@ phases:
 reports:
   pytest_reports:
     files:
-      - broadcast-flow
+      - broadcast-flow.xml
+      - platform-admin-flow.xml
+      - cbc-integration.xml
     base-directory: functional-test-reports
     file-format: JUNITXML
 
