--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -29,7 +29,7 @@ phases:
       - make test-cbc-integration
   post_build:
     commands:
-      - echo "Testing passed" > screenshots/success.txt
+      - echo "Test run completed"
 
 reports:
   pytest_reports:
