--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -18,13 +18,14 @@ phases:
       - VENV_TESTS='/venv/eas-tests'
       - python3.9 -m venv $VENV_TESTS
       - . $VENV_TESTS/bin/activate
-  build:
-    commands:
       - chmod +x environment.sh
       - . ./environment.sh
       - export ENVIRONMENT=preview
       - python3.9 -m pip install --upgrade pip wheel setuptools
       - make bootstrap
+  build:
+    on-failure: CONTINUE
+    commands:
       - make test-broadcast-flow
       - make test-cbc-integration
   post_build:
