--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -26,7 +26,7 @@ phases:
   build:
     on-failure: CONTINUE
     commands:
-      - make test-broadcast-flow
+      - make test-cbc-integration
   post_build:
     commands:
       - echo "Test run completed"
@@ -34,7 +34,7 @@ phases:
 reports:
   pytest_reports:
     files:
-      - broadcast-flow
+      - cbc-integration
     base-directory: functional-test-reports
     file-format: JUNITXML
 
