--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -26,7 +26,7 @@ phases:
   build:
     on-failure: CONTINUE
     commands:
-      = make test-broadcast-flow
+      - make test-broadcast-flow
       - make test-cbc-integration
   post_build:
     commands:
