EAS-1887 smoke test reporting (#44)
* add purge step to test fixture

* add env var for functional testing

* hook up purge to test fixture

* refactor for clarity

* try running files individually

* explore use of report files

* run broadcast flow only, for testing

* fix service id

* fix errors on sign-out

* shorten wait times for web update

* reduce retention limit, for testing

* try out test report output

* test reporting

* test reporting

* test reporting

* test reporting

* test reporting

* test reporting

* testing

* add extra time for retries

* add extra time for retries

* tweaks to test timings and sign-out

* tweaks to test output file names

* tweaks to test timings

* continue on failure

* testing

* run broadcast tests only

* update selenium package

* isolate the failing test

* try two tests

* testing

* testing

* testing

* testing

* testing

* testing

* testing

* testing

* testing

* testing

* testing

* reinstate broadcast and cbc integration tests

* fix test commands

* extend wait time for all retries

* redo lint command, and upgrade a package to stop dependabot complaining

* testing

* testing

* revise timings to fit with more deterministic celery retry intervals

* testing

* testing

* testing

* testing

* testing

* testing

* testing

* testing

* reinstate tests

* more testing of cbc integration tests

* test both AZs

* testing

* don't test for SQS retries

* remove unnecessary test

* testing

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -18,18 +18,20 @@ phases:
       - VENV_TESTS='/venv/eas-tests'
       - python3.9 -m venv $VENV_TESTS
       - . $VENV_TESTS/bin/activate
-  build:
-    commands:
       - chmod +x environment.sh
       - . ./environment.sh
       - export ENVIRONMENT=preview
       - python3.9 -m pip install --upgrade pip wheel setuptools
       - make bootstrap
-      - make test
+  build:
+    on-failure: CONTINUE
+    commands:
+      - make test-cbc-integration
   post_build:
     commands:
-      - echo "Testing passed" > screenshots/success.txt
+      - echo "Test run completed"
 
 artifacts:
   files:
     - screenshots/*
+    - functional-test-reports/*
