--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -26,7 +26,9 @@ phases:
   build:
     on-failure: CONTINUE
     commands:
+      - make test-broadcast-flow
       - make test-cbc-integration
+      - test-platform-admin-flow
   post_build:
     commands:
       - echo "Test run completed"
