--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -26,9 +26,7 @@ phases:
   build:
     on-failure: CONTINUE
     commands:
-      - make test-broadcast-flow 2> /dev/null
-      - make test-cbc-integration 2> /dev/null
-      - make test-platform-admin-flow 2> /dev/null
+      - make all-tests
   post_build:
     commands:
       - echo "Test run completed"
