--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -32,7 +32,7 @@ phases:
   post_build:
     commands:
       - echo "Test run completed"
-      - chmod -x scripts/check-test-output.sh
+      - chmod -x ./scripts/check-test-output.sh
       - cat ./functional-test-reports/broadcast-flow
       - cat ./functional-test-reports/broadcast-flow | ./scripts/check-test-output.sh
       - cat ./functional-test-reports/cbc-integration | ./scripts/check-test-output.sh
