--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -32,7 +32,9 @@ phases:
   post_build:
     commands:
       - echo "Test run completed"
+      - ll ./scripts/check-test-output.sh
       - chmod -x ./scripts/check-test-output.sh
+      - ll ./scripts/check-test-output.sh
       - cat ./functional-test-reports/broadcast-flow
       - cat ./functional-test-reports/broadcast-flow | ./scripts/check-test-output.sh
       - cat ./functional-test-reports/cbc-integration | ./scripts/check-test-output.sh
