--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -33,7 +33,7 @@ phases:
     commands:
       - echo "Test run completed"
       - ls -alF ./scripts/check-test-output.sh
-      - chmod -x ./scripts/check-test-output.sh
+      - chmod +x ./scripts/check-test-output.sh
       - ls -alF ./scripts/check-test-output.sh
       - cat ./functional-test-reports/broadcast-flow
       - cat ./functional-test-reports/broadcast-flow | ./scripts/check-test-output.sh
