--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -41,7 +41,7 @@ phases:
       - python3.9 ./scripts/collate-failure-info.py ./functional-test-reports/platform-admin-flow ./test-failures
 
       - echo "Reporting test failures..."
-      - python3.9 ./scripts/report-test-failures.py ./test-failures; exit 1
+      - python3.9 ./scripts/report-test-failures.py ./test-failures
 
   post_build:
     commands:
@@ -55,3 +55,4 @@ artifacts:
   files:
     - screenshots/*
     - functional-test-reports/*
+    - test-failures
