--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -36,6 +36,7 @@ phases:
 
       - echo "Collecting failure data..."
       - touch ./test-failures
+      - pwd
       - python3.9 ./scripts/collate-failure-info.py ./functional-test-reports/broadcast-flow ./test-failures
       - python3.9 ./scripts/collate-failure-info.py ./functional-test-reports/cbc-integration ./test-failures
       - python3.9 ./scripts/collate-failure-info.py ./functional-test-reports/platform-admin-flow ./test-failures
