--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -4,6 +4,7 @@ phases:
   install:
     runtime-versions:
       python: 3.9
+
     commands:
       - apt update
       - apt install -y xvfb libxi6 libgconf-2-4 libnss3
@@ -12,6 +13,7 @@ phases:
       - unzip chromedriver_linux64.zip
       - mv chromedriver /usr/bin/chromedriver
       - apt-get install -f -y
+
   pre_build:
     commands:
       - cd $CODEBUILD_SRC_DIR
@@ -23,17 +25,32 @@ phases:
       - export ENVIRONMENT=preview
       - python3.9 -m pip install --upgrade pip wheel setuptools
       - make bootstrap
+
   build:
     on-failure: CONTINUE
     commands:
-      - make test-broadcast-flow
-      - make test-cbc-integration
-      - make test-platform-admin-flow
+      - make test-broadcast-flow; exit 0
+      - make test-cbc-integration; exit 0
+      - make test-platform-admin-flow; exit 0
+      - echo "Test run completed."
+
+      - touch "$(pwd)/test-failures"
+      - chmod +rw "$(pwd)/test-failures"
+      - python3.9 ./scripts/collate-failure-info.py "$(pwd)/functional-test-reports/broadcast-flow" "$(pwd)/test-failures"
+      - python3.9 ./scripts/collate-failure-info.py "$(pwd)/functional-test-reports/cbc-integration" "$(pwd)/test-failures"
+      - python3.9 ./scripts/collate-failure-info.py "$(pwd)/functional-test-reports/platform-admin-flow" "$(pwd)/test-failures"
+
+      - python3.9 ./scripts/report-test-failures.py "$(pwd)/test-failures"
+
   post_build:
     commands:
-      - echo "Test run completed"
+      - chmod +x ./scripts/pass-or-fail-build.sh
+      - cat ./functional-test-reports/broadcast-flow | ./scripts/pass-or-fail-build.sh
+      - cat ./functional-test-reports/cbc-integration | ./scripts/pass-or-fail-build.sh
+      - cat ./functional-test-reports/platform-admin-flow | ./scripts/pass-or-fail-build.sh
 
 artifacts:
   files:
     - screenshots/*
     - functional-test-reports/*
+    - test-failures
