--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -32,6 +32,7 @@ phases:
       - make test-broadcast-flow; exit 0
       - make test-cbc-integration; exit 0
       - make test-platform-admin-flow; exit 0
+      - make test-authentication-flow; exit 0
       - echo "Test run completed."
 
       - touch "$(pwd)/test-failures"
@@ -39,6 +40,7 @@ phases:
       - python3.9 ./scripts/collate-failure-info.py "$(pwd)/functional-test-reports/broadcast-flow" "$(pwd)/test-failures"
       - python3.9 ./scripts/collate-failure-info.py "$(pwd)/functional-test-reports/cbc-integration" "$(pwd)/test-failures"
       - python3.9 ./scripts/collate-failure-info.py "$(pwd)/functional-test-reports/platform-admin-flow" "$(pwd)/test-failures"
+      - python3.9 ./scripts/collate-failure-info.py "$(pwd)/functional-test-reports/authentication-flow" "$(pwd)/test-failures"
 
       - python3.9 ./scripts/report-test-failures.py "$(pwd)/test-failures"
 
@@ -48,6 +50,7 @@ phases:
       - cat ./functional-test-reports/broadcast-flow | ./scripts/pass-or-fail-build.sh
       - cat ./functional-test-reports/cbc-integration | ./scripts/pass-or-fail-build.sh
       - cat ./functional-test-reports/platform-admin-flow | ./scripts/pass-or-fail-build.sh
+      - cat ./functional-test-reports/authentication-flow | ./scripts/pass-or-fail-build.sh
 
 artifacts:
   files:
