--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -1,5 +1,9 @@
 version: 0.2
 
+env:
+  variables:
+    TESTSUITES: "broadcast-flow cbc-integration platform-admin-flow authentication-flow"
+
 phases:
   install:
     runtime-versions:
@@ -25,11 +29,6 @@ phases:
       - export ENVIRONMENT=preview
       - python3.9 -m pip install --upgrade pip wheel setuptools
       - make bootstrap
-      - >-
-        export TESTSUITES=("broadcast-flow"
-        "cbc-integration"
-        "platform-admin-flow"
-        "authentication-flow")
 
   build:
     on-failure: CONTINUE
