--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,6 +3,7 @@ version: 0.2
 env:
   variables:
     testsuites: >-
+      platform-admin-flow
       authentication-flow
 
 phases:
@@ -36,7 +37,7 @@ phases:
     commands:
       # - make test-broadcast-flow; exit 0
       # - make test-cbc-integration; exit 0
-      # - make test-platform-admin-flow; exit 0
+      - make test-platform-admin-flow; exit 0
       - make test-authentication-flow; exit 0
       - echo "Test run completed."
       - touch "$(pwd)/test-failures"
