fix testsuite name

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -5,7 +5,7 @@ env:
     testsuites: >-
       broadcast-flow
       cbc-integration
-      platform-admin
+      platform-admin-flow
       authentication-flow
 
 phases:
