--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,10 +3,7 @@ version: 0.2
 env:
   variables:
     testsuites: >-
-      broadcast-flow
-      cbc-integration
-      platform-admin-flow
-      authentication-flow
+      top-rail-services
 
 phases:
   install:
@@ -37,11 +34,11 @@ phases:
   build:
     on-failure: CONTINUE
     commands:
-      - make test-broadcast-flow; exit 0
-      - make test-cbc-integration; exit 0
-      - make test-platform-admin-flow; exit 0
-      - make test-authentication-flow; exit 0
-      # - make test-top-rail-services; exit 0
+      # - make test-broadcast-flow; exit 0
+      # - make test-cbc-integration; exit 0
+      # - make test-platform-admin-flow; exit 0
+      # - make test-authentication-flow; exit 0
+      - make test-top-rail-services; exit 0
       - echo "Test run completed."
       - touch "$(pwd)/test-failures"
       - chmod +rw "$(pwd)/test-failures"
