EAS-1972 User Auth and Support tests (#49)
* refactor pipeline scripts

* refactor pipeline scripts

* multiline command

* try defining env var at top of file

* try defining env var at top of file

* fix file path

* force tests to fail for testing

* revert intentional fails

* refactor

* test password reset flow

* reference env vars and remove unecessary tests

* add placeholder for email 2fa test

* testing

* testing

* test password reset

* add user for password reset test

* full password reset flow test

* email auth test flow

* fix config

* fix url

* fix login

* fix users

* testing

* format sql script for readability

* fix duplicated uuids

* change some emails

* testing

* testing

* testing

* testing

* testing

* testing

* add test for support links

* add makefile and buildspec commands

* add makefile and buildspec commands

* use eas email addresses

* remove zendesk generating tests

* remove debug line

* fix test failures

* fix test failures

* some login refactoring

* fix testsuite name

* test form submission

* test

* temporarily switch off top-rail tests to reduce Zendesk noise

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -1,5 +1,13 @@
 version: 0.2
 
+env:
+  variables:
+    testsuites: >-
+      broadcast-flow
+      cbc-integration
+      platform-admin-flow
+      authentication-flow
+
 phases:
   install:
     runtime-versions:
@@ -33,24 +41,16 @@ phases:
       - make test-cbc-integration; exit 0
       - make test-platform-admin-flow; exit 0
       - make test-authentication-flow; exit 0
+      # - make test-top-rail-services; exit 0
       - echo "Test run completed."
-
       - touch "$(pwd)/test-failures"
       - chmod +rw "$(pwd)/test-failures"
-      - python3.9 ./scripts/collate-failure-info.py "$(pwd)/functional-test-reports/broadcast-flow" "$(pwd)/test-failures"
-      - python3.9 ./scripts/collate-failure-info.py "$(pwd)/functional-test-reports/cbc-integration" "$(pwd)/test-failures"
-      - python3.9 ./scripts/collate-failure-info.py "$(pwd)/functional-test-reports/platform-admin-flow" "$(pwd)/test-failures"
-      - python3.9 ./scripts/collate-failure-info.py "$(pwd)/functional-test-reports/authentication-flow" "$(pwd)/test-failures"
-
+      - python3.9 ./scripts/collect-failure-data.py $(pwd) $testsuites
       - python3.9 ./scripts/report-test-failures.py "$(pwd)/test-failures"
 
   post_build:
     commands:
-      - chmod +x ./scripts/pass-or-fail-build.sh
-      - cat ./functional-test-reports/broadcast-flow | ./scripts/pass-or-fail-build.sh
-      - cat ./functional-test-reports/cbc-integration | ./scripts/pass-or-fail-build.sh
-      - cat ./functional-test-reports/platform-admin-flow | ./scripts/pass-or-fail-build.sh
-      - cat ./functional-test-reports/authentication-flow | ./scripts/pass-or-fail-build.sh
+      - python3.9 ./scripts/signal-build-pass-or-fail.py $(pwd) $testsuites
 
 artifacts:
   files:
