--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -7,6 +7,8 @@ env:
       cbc-integration
       platform-admin-flow
       authentication-flow
+      top-rail-services
+      links-and-cookies
 
 phases:
   install:
@@ -41,7 +43,8 @@ phases:
       - make test-cbc-integration; exit 0
       - make test-platform-admin-flow; exit 0
       - make test-authentication-flow; exit 0
-      # - make test-top-rail-services; exit 0
+      - make test-top-rail-services; exit 0
+      - make test-links-and-cookies; exit 0
       - echo "Test run completed."
       - touch "$(pwd)/test-failures"
       - chmod +rw "$(pwd)/test-failures"
