--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -7,7 +7,6 @@ env:
       cbc-integration
       platform-admin-flow
       authentication-flow
-      top-rail-services
       links-and-cookies
 
 phases:
@@ -43,7 +42,7 @@ phases:
       - make test-cbc-integration; exit 0
       - make test-platform-admin-flow; exit 0
       - make test-authentication-flow; exit 0
-      - make test-top-rail-services; exit 0
+      # - make test-top-rail-services; exit 0
       - make test-links-and-cookies; exit 0
       - echo "Test run completed."
       - touch "$(pwd)/test-failures"
