--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -15,7 +15,7 @@ phases:
       - apt install -y xvfb libxi6 libgconf-2-4 libnss3
       - cd /tmp/
       - wget https://storage.googleapis.com/chrome-for-testing-public/122.0.6261.128/linux64/chromedriver-linux64.zip
-      - unzip chromedriver_linux64.zip
+      - unzip chromedriver-linux64.zip
       - mv chromedriver /usr/bin/chromedriver
       - apt-get install -f -y
 
