--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -11,12 +11,32 @@ phases:
       python: 3.9
 
     commands:
+      # - apt update
+      # - apt install -y xvfb libxi6 libgconf-2-4 libnss3
+      # - cd /tmp/
+      # - wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
+      # - unzip chromedriver_linux64.zip
+      # - mv chromedriver /usr/bin/chromedriver
+      # - apt-get install -f -y
+
       - apt update
       - apt install -y xvfb libxi6 libgconf-2-4 libnss3
-      - cd /tmp/
-      - wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
-      - unzip chromedriver_linux64.zip
-      - mv chromedriver /usr/bin/chromedriver
+
+      # install google chrome
+      - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+      - sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
+      - apt-get -y update
+      - apt-get install -y google-chrome-stable
+
+      # install chromedriver
+      - apt-get install -yqq unzip jq
+      - curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json | jq -rc '.channels.Stable.downloads.chromedriver[] | select(.platform == "linux64").url' > /tmp/chromedriver_url
+      - wget -O /tmp/chromedriver.zip `cat /tmp/chromedriver_url`
+      - unzip -j /tmp/chromedriver.zip chromedriver-linux64/chromedriver -d /usr/local/bin/
+
+      # upgrade pip
+      - pip install --upgrade pip
+
       - apt-get install -f -y
 
   pre_build:
