test change service name

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -4,7 +4,6 @@ env:
   variables:
     testsuites: >-
       platform-admin-flow
-      template-flow
 
 # broadcast-flow
 # cbc-integration
@@ -58,9 +57,8 @@ phases:
       # - make test-cbc-integration; exit 0
       - make test-platform-admin-flow; exit 0
       # - make test-authentication-flow; exit 0
-      # - make test-top-rail-services; exit 0
       # - make test-links-and-cookies; exit 0
-      - make test-template-flow; exit 0
+      # - make test-template-flow; exit 0
       - echo "Test run completed."
       - touch "$(pwd)/test-failures"
       - chmod +rw "$(pwd)/test-failures"
