--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,14 +3,12 @@ version: 0.2
 env:
   variables:
     testsuites: >-
+      broadcast-flow
+      cbc-integration
       platform-admin-flow
-
-# broadcast-flow
-# cbc-integration
-# platform-admin-flow
-# authentication-flow
-# links-and-cookies
-# template-flow
+      authentication-flow
+      links-and-cookies
+      template-flow
 
 phases:
   install:
@@ -53,12 +51,12 @@ phases:
   build:
     on-failure: CONTINUE
     commands:
-      # - make test-broadcast-flow; exit 0
-      # - make test-cbc-integration; exit 0
+      - make test-broadcast-flow; exit 0
+      - make test-cbc-integration; exit 0
       - make test-platform-admin-flow; exit 0
-      # - make test-authentication-flow; exit 0
-      # - make test-links-and-cookies; exit 0
-      # - make test-template-flow; exit 0
+      - make test-authentication-flow; exit 0
+      - make test-links-and-cookies; exit 0
+      - make test-template-flow; exit 0
       - echo "Test run completed."
       - touch "$(pwd)/test-failures"
       - chmod +rw "$(pwd)/test-failures"
