EAS-2027 Test User-centric Workflows (#66)
* add file for new test suite

* add user tests

* add urls waits

* fix element selector

* fix element selector

* fix mobile verification

* use correct selenium page

* refresh page

* use relative url

* fix element selector

* reinstate tests

* add name

* revert version bump

* revert previous revert

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -9,6 +9,7 @@ env:
       authentication-flow
       links-and-cookies
       template-flow
+      user-operations
 
 phases:
   install:
@@ -57,6 +58,7 @@ phases:
       - make test-authentication-flow; exit 0
       - make test-links-and-cookies; exit 0
       - make test-template-flow; exit 0
+      - make test-user-operations; exit 0
       - echo "Test run completed."
       - touch "$(pwd)/test-failures"
       - chmod +rw "$(pwd)/test-failures"
