--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -4,6 +4,12 @@ env:
   variables:
     testsuites: >-
       broadcast-flow
+      cbc-integration
+      platform-admin-flow
+      authentication-flow
+      links-and-cookies
+      template-flow
+      user-operations
 
 phases:
   install:
@@ -47,12 +53,12 @@ phases:
     on-failure: CONTINUE
     commands:
       - make test-broadcast-flow; exit 0
-      # - make test-cbc-integration; exit 0
-      # - make test-platform-admin-flow; exit 0
-      # - make test-authentication-flow; exit 0
-      # - make test-links-and-cookies; exit 0
-      # - make test-template-flow; exit 0
-      # - make test-user-operations; exit 0
+      - make test-cbc-integration; exit 0
+      - make test-platform-admin-flow; exit 0
+      - make test-authentication-flow; exit 0
+      - make test-links-and-cookies; exit 0
+      - make test-template-flow; exit 0
+      - make test-user-operations; exit 0
       - echo "Test run completed."
       - touch "$(pwd)/test-failures"
       - chmod +rw "$(pwd)/test-failures"
